2010-05-19  Enrica Casucci  <enrica@apple.com>

        Reviewed by Dave Hyatt.

        REGRESSION (r59385) crash destroying inline renderers
        https://bugs.webkit.org/show_bug.cgi?id=39143
        <rdar://problem/8003662>

        * fast/inline-block/anonymous-block-crash-expected.txt: Added.
        * fast/inline-block/anonymous-block-crash.html: Added.

2010-05-19  Sheriff Bot  <webkit.review.bot@gmail.com>

        Unreviewed, rolling out r59782.
        http://trac.webkit.org/changeset/59782
        https://bugs.webkit.org/show_bug.cgi?id=39379

        broke DRT build (Requested by dpranke on #webkit).

        * fast/notifications/notifications-replace-expected.txt: Added.
        * fast/notifications/notifications-replace.html: Added.
        * fast/notifications/notifications-rtl-expected.txt: Added.
        * fast/notifications/notifications-rtl.html: Added.

2010-05-18  Dirk Pranke  <dpranke@chromium.org>

        Reviewed by Dimitri Glazkov.

        Attempt to revert r58765 to see if it was causing a performance
        regression.

        https://bugs.webkit.org/show_bug.cgi?id=39328

        * fast/notifications/notifications-replace-expected.txt: Removed.
        * fast/notifications/notifications-replace.html: Removed.
        * fast/notifications/notifications-rtl-expected.txt: Removed.
        * fast/notifications/notifications-rtl.html: Removed.

2010-05-19  Martin Robinson  <mrobinson@igalia.com>

        Not reviewed.

        Add baselines for new multi-column tests.

        * platform/gtk/fast/multicol/column-count-with-rules-expected.txt: Added.
        * platform/gtk/fast/multicol/layers-in-multicol-expected.txt: Added.
        * platform/gtk/fast/multicol/nested-columns-expected.txt: Added.

2010-05-19  Justin Schuh  <jschuh@chromium.org>

        Reviewed by Adam Barth.

        Moving frame.src checks out of the bindings
        https://bugs.webkit.org/show_bug.cgi?id=37815
