@@ -68,11 +68,6 @@ namespace WebCore {
         KURL iconURL() { return m_contents.icon(); }
         NotificationContents& contents() { return m_contents; }
 
-        String dir() const { return m_direction; }
-        void setDir(const String& dir) { m_direction = dir; }
-        String replaceId() const { return m_replaceId; }
-        void setReplaceId(const String& replaceId) { m_replaceId = replaceId; }
-
         DEFINE_ATTRIBUTE_EVENT_LISTENER(display);
         DEFINE_ATTRIBUTE_EVENT_LISTENER(error);
         DEFINE_ATTRIBUTE_EVENT_LISTENER(close);
@@ -98,9 +93,6 @@ namespace WebCore {
         KURL m_notificationURL;
         NotificationContents m_contents;
 
-        String m_direction;
-        String m_replaceId;
-      
         bool m_isShowing;
 
         NotificationPresenter* m_presenter;
