@@ -42,9 +42,6 @@ module threads {
         attribute EventListener onerror;
         attribute EventListener onclose;
 
-        attribute DOMString dir;
-        attribute DOMString replaceId;
-
         // EventTarget interface
         void addEventListener(in DOMString type, 
                               in EventListener listener, 
