@@ -1,3 +1,10 @@
+2010-05-19  Dirk Pranke  <dpranke@chromium.org>
+
+        Try again to roll out r58675.
+
+        * notifications/Notification.h:
+        * notifications/Notification.idl:
+
 2010-05-19  Enrica Casucci  <enrica@apple.com>
 
         Reviewed by Dave Hyatt.
