@@ -1,3 +1,12 @@
+2010-05-19  Dirk Pranke  <dpranke@chromium.org>
+
+        Try again to roll out r58765
+
+        * fast/notifications/notifications-replace-expected.txt: Removed.
+        * fast/notifications/notifications-replace.html: Removed.
+        * fast/notifications/notifications-rtl-expected.txt: Removed.
+        * fast/notifications/notifications-rtl.html: Removed.
+
 2010-05-19  Enrica Casucci  <enrica@apple.com>
 
         Reviewed by Dave Hyatt.
